--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ul>
             <li><a href="serie-1/index.html">Série 1</a></li>
             <li><a href="serie-2/index.html">Série 2</a></li>
+            <li><a href="serie-3/index.html">Série 3</a></li>
         </ul>
     </div>
 </body>
